--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>HackerNews</title>
     <%= csrf_meta_tags %>
+        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+            <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+<body>
+    <% flash.each do |name, msg| %>
+        <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+            <% end %>
+                <% if user_signed_in? %>
+                    <ul>
+                        <li>
+                            <%= link_to "Submit", new_submission_path %>
+                        </li>
+                        <li>
+                            <%= link_to "Account", edit_user_registration_path %>
+                        </li>
+                        <li>
+                            <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+                        </li>
+                    </ul>
+                    <% else %>
+                        <ul>
+                            <li>
+                                <%= link_to "Sign up", new_user_registration_path %>
+                            </li>
+                            <li>
+                                <%= link_to "Sign in", new_user_session_path %>
+                            </li>
+                        </ul>
+                        <% end %>
+                            <%= yield %>
+</body>
 
-  <body>
-	<% flash.each do |name, msg| %>
-      <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
-    <% end %>
-    	<%= yield %>
-  </body>
 </html>
