--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -1,8 +1,21 @@
 <div class="page-header">
-  <h3><%= @submission.title %></h3> <a href=""><%= @submission.url %></a>
+  <h4>
+    <%= link_to like_submission_path(@submission), method: :put do %>
+      <i class="fa fa-caret-up fa-lg " aria-hidden="true"></i>
+    <% end %>
+    <%= @submission.title %>
+    <a href="<%= @submission.url %>"><%= @submission.url %></a>
+  </h4>
+  <p><%= @submission.get_upvotes.size %> points by <%= @submission.user.email %> <%= time_ago_in_words(@submission.created_at) %> ago | <%= link_to "#{@submission.comments.count} comments", @submission %> </p>
   <br>
-  <% if @submission.user == current_user %>
-    <%= link_to 'delete', @submission, method: :delete, data: {confirm: "Are you sure?" } %> |
-    <%= link_to 'back', submissions_path %>
+
+  <%= simple_form_for [@submission, Comment.new] do |f| %>
+    <%= f.text_area :body, class: "form-control" %>
+    <br>
+    <%= f.submit "add comment" %>
   <% end %>
+
+  <div id="comments">
+    <%= render :partial => @submission.comments %>
+  </div>
 </div>
